[package]
name = "nca-header-dec"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xts-mode = "0.5.1"
aes = "0.8.2"

[dependencies.neon]
version = "1.0.0-alpha.2"
default-features = false
features = ["napi-latest"]
